# fsm-cxx

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .version.cmake  CHANGELOG  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: cmake.yml
ci/: local_install
docs/: CMakeLists.txt
include/: fsm_cxx.hh
include/fsm_cxx/: fsm-assert.hh  fsm-common.hh  fsm-config.hh  fsm-debug.hh  fsm-def.hh  fsm-sm.hh
include/fsm_cxx/detail/: fsm-if.hh
tests/: CMakeLists.txt  basic.cc  holder.cc
